--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "simple-react-lightbox": "^3.1.2-3",
+    "yargs-parser": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
